<resources>
    <string name="app_name">Start7</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="notice_1"><u>1.Walk-in Interview for SRF under BRNS project scheduled on 12 September 2017 is postponed till further information</u></string>
    <string name="notice_2"><u>2.Temporary closure of office due to flood.</u></string>
    <string name="notice_3"><u>3.Walk in interview for JRF under BRNS Project scheduled on 12th September 2017</u></string>
    <string name="notice_4"><u>4.Filing up of post of Technical Officer (T6)</u></string>
    <string name="notice_5"><u>5.Application Form for Allotment of Accommodation in NRCL Guest House</u></string>
    <string name="notice_6"><u>6.Steps-to-search-NRCL-tender-on-GOI-EPROCUREMENT-PORTAL</u></string>
    <string name="notice_7"><u>7.Guidelines for ICAR Extramural Projects</u></string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="name">ICAR - NRCL</string>
    <string name="news_1"><u>1.Zero budget natural farming promoted under Mera Gaon Mera Gaurav programme at Kankatti, East Champaran.</u></string>
    <string name="news_2"><u>2.Field day celebrated at Kankatti, East Champaran under Mera Gaon Mera Gaurav Programme.</u></string>
    <string name="news_3"><u>3.ICAR Short Course on Trichoderma organized at NRCL, Muzaffarpur.</u></string>
    <string name="news_4"><u>4.NRCL celebrated Agriculture Education Day on 11 Sep. 2016.</u></string>
    <string name="read"><u>Read more</u></string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome_string">"Welcome to National Research Centre on Litchi
                                     An ISO 9001:2008 CERTIFIED INSTITUTE"
    </string>
    <string name="director">VISHAL NATH(Director)</string>
    <string name="institute">The Institute</string>
    <string name="tender_1"><u>1.Auction Notice of Litchi Fruits on trees at NRCL 20.04.17.</u></string>
    <string name="tender_2"><u>2.Extension in date for suibmission of tender Work contract-Group-III.</u></string>
    <string name="tender_3"><u>3.Quotation for Twin Litchi Pulper.</u></string>
    <string name="tender_4"><u>4.Auction notice for old store items 2016-17 and tender papers.</u></string>
    <string name="tender_5"><u>5.Tender notice for Security Contract -2017.</u></string>
    <string name="tender_6"><u>6.Tender notice for Work Contract (Estate)-III 2017.</u></string>
    <string name="tender_7"><u>7.Specification For Furnishing Scientist visiting Home (Furniture electrical items).</u></string>
    <string name="tender_8"><u>8.Tender Notice for Furnishing Scientist Visiting Home (Furnitture electrical items).</u></string>
    <string name="tender_9"><u>9.Specification of equipment 07-Dec-2016.</u></string>
    <string name="tender_10"><u>10.Tender notice for equipment dated 07-12-2016.</u></string>
    <string name="tender_11"><u>11.Equipment Specification 06-10-2016.</u></string>
    <string name="tender_12"><u>12.Tender notice and Tender document 06-10-2016.</u></string>
    <string name="tender_13"><u>13.Tender notice for purchase of equipments 15.07.2016.</u></string>
    <string name="tender_14"><u>14.Specification of equipment tender notice 15.07.2016.</u></string>
    <string name="tender_15"><u>15.Tender notice and tender document -Works contract Group-I.</u></string>
    <string name="tender_16"><u>16.Steps-to-search-NRCL-tender-on-GOI-EPROCUREMENT-PORTAL.</u></string>
    <string name="recruit_1"><u>1.Filing up of Sr. Technical Officer (T6) on deputation basis.</u></string>
    <string name="recruit_2"><u>2.Result of walk in interview held for YP on 15 Dec 2016.</u></string>
    <string name="recruit_3"><u>3.DECLARATION OF RESULT :- Selected Candidate for Young Professionals-1 and 11 in the basis of work in- interview held on 08th November, 2006.</u></string>
    <string name="recruit_4"><u>4.Walk-in-interview for Young Professional-I and II, date of interview 08.11.2016.</u></string>
    <string name="recruit_5"><u>5.Click here to download Syllabus/scheme of examination for Technician T-1.</u></string>
    <string name="recruit_6"><u>6.Click to download Admission Certificate for recruitment to the post of T-1 scheduled on 04th Sept 16.</u></string>
    <string name="recruit_7"><u>7.Instructions to the candidates appearing for Written Examination for Technician, T-1 scheduled on 04th September 2016.</u></string>
    <string name="recruit_8"><u>8.Notice_Date and Venue of Examination_Technician, T-1 (Field/Farm and Lab tech).</u></string>
    <string name="recruit_9"><u>9.List of Shortlisted candidates for Written Examination for Technician, T-1 scheduled on 04thSeptember 2016.</u></string>
    <string name="recruit_10"><u>10.Notice for the candidates appearing for T-1 Examination scheduled on 04th Sep 2016.</u></string>
    <string name="recruit_11"><u>11.Answer Key of Written Examination of Technical (T-3) held on 17th July 2016.</u></string>
    <string name="recruit_12"><u>12.Examination Notice for recruitment of Technical Assistant T-</u></string>
    <string name="recruit_13"><u>13.Technical assistant T-3 Recruitment Guidelines.</u></string>
    <string name="home_text_1"><u>1. Winter School on “Understanding Flowering Mechanism and Management of Bearing in Sub-tropical Fruits” , 1st – 21st December, 2017</u></string>
    <string name="intro">Welcome to National Research Centre on Litchi\nAn ISO 9001:2008 CERTIFIED INSTITUTE</string>
    <string name="home_1"><u>1. ISO 9001:2008</u></string>
    <string name="litchi">Litchi: the fruit</string>
    <string name="home_2"><u>2. An Introduction</u></string>
    <string name="home_3"><u>3. Organogram</u></string>
    <string name="home_4"><u>4. Infrastructure</u></string>
    <string name="home_5"><u>5. Governance</u></string>
    <string name="home_6"><u>6. Research Projects</u></string>
    <string name="home_7"><u>7. Technology Developed</u></string>
    <string name="home_8"><u>8. Annual Reports</u></string>
    <string name="home_9"><u>9. Research Achievements</u></string>
    <string name="home_10"><u>10. Vision 2030</u></string>
    <string name="home_11"><u>11. Vision 2050</u></string>
    <string name="litchi1"><u>1. About the fruit</u></string>
    <string name="litchi2"><u>2. How to plant litchi</u></string>
    <string name="litchi3"><u>3. Production of litchi in India: Stats</u></string>
    <string name="home_21"><u>1. Diagnosis of major diseases of litchi</u></string>
    <string name="home_22"><u>2. Advisory on management of fruit borers of litchi (English)</u></string>
    <string name="home_23"><u>3. फल बेधक कीट के प्रकोप से लीची के फलों को कैसे बचाएँ (हिन्दी में)</u></string>
    <string name="home_24"><u>4. Likely attack of Loopers pest in litchi during september to November</u></string>
    <string name="error_invalid_email">1.Walk-in Interview for SRF under BRNS project scheduled on 12 September 2017 is postponed till further information</string>
    <string name="main_1">\tभा. कृ. अनु. प. – राष्ट्रीय लीची अनुसंधान केंद्र \nICAR - National Research Centre On Litchi</string>
    <string name="main_2">भारतीय कृषि अनुसंधान परिषद \nIndian Council Of Agricultural Research</string>
</resources>