<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="25dp">



        <ImageView
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:src="@drawable/notice_1"
            android:id="@+id/notice_image"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RECRUITMENTS:"
            android:textColor="#000000"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recruit_1"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/recruit_pdf_11"
            android:textColor="#000000"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recruit_2"
            android:layout_marginTop="250dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/recruit_pdf_12"
            android:textColor="#000000"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recruit_3"
            android:layout_marginTop="300dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/recruit_pdf_13"
            android:textColor="#000000"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recruit_4"
            android:layout_marginTop="380dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/recruit_pdf_14"
            android:textColor="#000000"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recruit_5"
            android:layout_marginTop="430dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:id="@+id/recruit_pdf_15"
            android:textColor="#000000"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recruit_6"
            android:layout_marginTop="480dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/recruit_pdf_16"
            android:textColor="#000000"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recruit_7"
            android:layout_marginTop="545dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/recruit_pdf_17"
            android:textColor="#000000"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recruit_8"
            android:layout_marginTop="610dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/recruit_pdf_18"
            android:textColor="#000000"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recruit_9"
            android:layout_marginTop="675dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/recruit_pdf_19"
            android:textColor="#000000"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recruit_10"
            android:layout_marginTop="735dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/recruit_pdf_20"
            android:textColor="#000000"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recruit_11"
            android:layout_marginTop="785dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/recruit_pdf_21"
            android:textColor="#000000"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recruit_12"
            android:layout_marginTop="830dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:id="@+id/recruit_pdf_22"
            android:textColor="#000000"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recruit_13"
            android:layout_marginTop="875dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/recruit_pdf_23"
            android:textColor="#000000"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"/>

     
    </RelativeLayout>

</ScrollView>