<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp">


    <ImageView
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:src="@drawable/notice_1"
        android:id="@+id/notice_image"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NEWS AND EVENTS:"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textStyle="bold"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_1"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/news_pdf_1"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_2"
        android:layout_marginTop="280dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/news_pdf_2"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_3"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/news_pdf_3"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_4"
        android:layout_marginTop="405dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/news_pdf_4"
        android:textColor="#000000"
        android:textStyle="bold"/>
</RelativeLayout>
    
    </ScrollView>