<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text11"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="Litchi: the fruit"
            android:textColor="#000000"
            android:textStyle=""/>

        <TextView
            android:id="@+id/fruit_wiki"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/text11"
            android:layout_marginLeft="20dp"
            android:text="@string/litchi1"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/fruit_video"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/fruit_wiki"
            android:layout_marginLeft="20dp"
            android:text="@string/litchi2"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/fruit_stats"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/fruit_video"
            android:layout_marginLeft="20dp"
            android:text="@string/litchi3"
            android:textColor="#000000" />


    </RelativeLayout>
</ScrollView>